fixed the finder component and dark mode

--- a/CyberPlus/src/app/components/menu/menu.component.css
+++ b/CyberPlus/src/app/components/menu/menu.component.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    z-index: 10;
+    z-index: 999;
 }
 
 .menu-bar,
@@ -110,7 +110,7 @@
 .finder {
     width: 100%;
     position: absolute;
-    z-index: 1;
+    z-index: 998;
 }
 
 .find {
