--- a/CyberPlus/src/app/views/home/card/card.component.css
+++ b/CyberPlus/src/app/views/home/card/card.component.css
@@ -31,7 +31,6 @@
     border-radius: 50%;
     top: 296px;
     left: 5px;
-    z-index: 999;
 }
 
 .image {
